--- a/ToDoApi/ToDoApi/ToDoApi/appsettings.json
+++ b/ToDoApi/ToDoApi/ToDoApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ConnectionString": "Server=tcp:hawkins-database-server.database.windows.net,1433;Initial Catalog=P0_DB;Persist Security Info=False;User ID=ServerAdmin;Password=password0!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
